SOURCE/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Secondry_Referent_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondry Referent Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Secondary Inbound Account)</relationshipLabel>
        <relationshipName>Admissions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sober_Living__c</fullName>
        <label>Sober Living</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Discharge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Completed Successfully</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>AMA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Therapeutic Discharge</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Therapeutic Transfer</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_s_the_reimbursement_rate_the_policy__c</fullName>
        <inlineHelpText>What’s the reimbursement rate the policy pays at based on Medicare or usual and customary?</inlineHelpText>
        <label>What’s the reimbursement rate the policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Reason_for_Refer_Out_validation</fullName>
        <active>true</active>
        <errorConditionFormula>And(ispickval(StageName,&apos;Refer Out&apos;),Or(isblank( Text(Reaon_for_Refer_Out__c )),isblank(Client_Last_Name__c)))</errorConditionFormula>
        <errorDisplayField>Reaon_for_Refer_Out__c</errorDisplayField>
        <errorMessage>Please fill &apos;Reason for Refer Out&apos; and &apos;Patient Last Name &apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Pending_Admission_checks</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
And(ischanged(StageName),ispickval(StageName,&apos;Pending Admission&apos;)),
OR(isblank(Client_First_Name__c),isblank(Client_Last_Name__c),
isblank(Client_DOB__c),isblank(Street__c),isblank(City__c),
isblank(text(State1__c)),isblank(Zip__c),isblank(Primary_Phone__c),
isblank(text(Identifier_Gender__c)),isblank(Subscriber_First_Name__c),
isblank(Subscriber_Last_Name__c),isblank(Insurance_Provider__c),
isblank(Medical_Insurance_Phone__c),isblank(Medical_Group__c),
isblank(Medical_Member_ID__c),isblank(Referrent__c))


,false)</errorConditionFormula>
        <errorMessage>Please Fill: 
Patient First Name ,Patient Last Name
,Patient DOB   
, Phone
, Gender 
, Street
, State
, City
, Country
, Insurance Provider
, Member ID#
, Group#
, Subs First Name
, Subs Last Name
, Medical Phone
, Referent</errorMessage>
    </validationRules>
</CustomObject>